--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
 
   <body>
-    <div class="w3-container w3-blue" text-align: center;>
+    <div class="w3-container w3-blue w3-center">
         <h1>NJOGU MUNYIRI</h1>
     </div>
+    <img src="pic.jpg" alt="portfolio picture" class="w3-bordered w3-float w3-right w3-small w3-image" style="width:20%">
+    
   </body>
 </html>
