--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <title>PORTFOLIO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+    <style>
+      .tangerine {
+        font-family: 'Tangerine',serif;
+        font-size: 50px;
+        }
+    </style>
   </head>
 
   <body>
@@ -12,6 +18,43 @@
         <h1>NJOGU MUNYIRI</h1>
     </div>
     <img src="pic.jpg" alt="portfolio picture" class="w3-bordered w3-float w3-right w3-small w3-image" style="width:20%">
-    
+
+    <div class="w3-container tangerine">
+      <p><strong>James Njogu Munyiri</strong> is a young Kenyan who has interest in the world of technology specificaly software development.
+                  Currently my main objective is to gain extensive experience in the Information Technology field specifically,
+                  enhancing my programming skills and experience to achieve an effective output towards the benefit of my clients,
+                   society and region at large, with an aim of making a difference in the economy.</p>
+      <hr>
+    </div>
+    <article class="w3-container">
+      <h2><u>Portfolio</u></h2>
+      <h3>Development Capabilities:</h3>
+      <ul>
+        <li>HTML</li>
+        <li>PHP</li>
+        <li>Java script</li>
+        <li>c#</li>
+        <li>C++</li>
+        <li>java</li>
+        <li>mysql</li>
+      </ul>
+      <br>
+      <h3><u>Projects</u></h3>
+      <ul>
+        <li><a href="https://github.com/NjoguMunyiri/halloWorld">https://github.com/NjoguMunyiri/halloWorld</a></li>
+        <li><a href="https://github.com/NjoguMunyiri/practice">https://github.com/NjoguMunyiri/practice</a></li>
+        <li><a href="https://github.com/NjoguMunyiri/sa1">https://github.com/NjoguMunyiri/sa1</a></li>
+        <li><a href="https://github.com/NjoguMunyiri/sa2">https://github.com/NjoguMunyiri/sa2</a></li>
+        <li><a href="https://github.com/NjoguMunyiri/mysite">https://github.com/NjoguMunyiri/mysite</a></li>
+      </ul>
+      <p></p>
+      <hr>
+    </article>
+    <article class="w3-container">
+      <h3>About me</h3>
+      <p></p>
+        <hr>
+    </article>
+
   </body>
 </html>
