about me and contact us

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         font-family: 'Tangerine',serif;
         font-size: 50px;
         }
+      .cambria{
+        font-family: 'cambria';
+      }
     </style>
   </head>
 
@@ -51,9 +54,24 @@
       <hr>
     </article>
     <article class="w3-container">
-      <h3>About me</h3>
-      <p></p>
+      <h3><u>About me</u></h3>
+      <div class="cambria">
+        <p><strong>James Njogu Munyiri</strong> is a software deveoloper who's background is a Bachelor of Science in Business and Information Technology,
+          specialising in mobile programming.<br>
+          <strong>Njogu Munyiri</strong> also possess a certified mobile developer in Android certification from I Lab Africa.<br>
+          Currently i am persuing Moringa Prep Part Time class with the aim to advance my programming skills</p>
+      </div>
         <hr>
+    </article>
+    <article class="w3-container">
+      <h3><u>Contact Me</u></h3>
+      <div class="cambria w3-ul">
+        <ul>
+          <li>Email:<u>munyiri_james@outlook.com</u></li>
+          <li><a href="https://www.linkedin.com/in/james-munyiri-29b58792/">Linked In</a></li>
+          <li>Number: <u>+254707454022</u></li>
+        </ul>
+      </div>
     </article>
 
   </body>
