--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       .cambria{
         font-family: 'cambria';
       }
+      footer{
+        text-align: right;
+      }
     </style>
   </head>
 
@@ -85,8 +88,8 @@
       <div class="tab-pane fade" id="contact">
         <article class="w3-container">
           <h3><u>Contact Me</u></h3>
-          <div class="cambria w3-ul">
-            <ul>
+          <div class="cambria">
+            <ul class="w3-ul">
               <li>Email: <a href="mailto:munyiri_james@outlook.com">munyiri_james@outlook.com</a></li>
               <li><a href="https://www.linkedin.com/in/james-munyiri-29b58792/">Linked In</a></li>
               <li><a href="https://github.com/NjoguMunyiri">Git hub</a></li>
@@ -97,5 +100,8 @@
         </article>
       </div>
     </div>
+    <footer>
+      <p>njogu 2017</p>
+    </footer>
   </body>
 </html>
