--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="w3-container w3-blue w3-center">
         <h1>NJOGU MUNYIRI</h1>
     </div>
-    <img src="pic.jpg" alt="portfolio picture" class="w3-bordered w3-float w3-right w3-small w3-image" style="width:20%">
-    <br><br>
+    <img src="pic.jpg" alt="portfolio picture" class="w3-bordered w3-right" style="width:20%">
+    <hr>
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#home"><strong>Home</strong></a></li>
       <li><a data-toggle="tab" href="#portfolio">Portfolio</a></li>
