--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p><strong>James Njogu Munyiri</strong> is a software deveoloper who's background is a Bachelor of Science in Business and Information Technology,
               specialising in mobile programming.<br>
               <strong>Njogu Munyiri</strong> also possess a certified mobile developer in Android certification from I Lab Africa.<br>
-              Currently i am persuing Moringa Prep Part Time class with the aim to advance my programming skills</p>
+              Currently <strong>Njogu</strong> is persuing Moringa Prep Part Time class with the aim to advance his programming skills</p>
           </div>
           <hr>
         </article>
