--- a/index.html
+++ b/index.html
@@ -36,58 +36,61 @@
     </ul>
     <div class="tab-content">
       <div class="tab-pane fade in active tangerine" id="home">
+        <h2></h2>
         <p><strong>James Njogu Munyiri</strong> is a young Kenyan who has interest in the world of technology specificaly software development.
-                  Currently my main objective is to gain extensive experience in the Information Technology field specifically,
-                  enhancing my programming skills and experience to achieve an effective output towards the benefit of my clients,
-                   society and region at large, with an aim of making a difference in the economy.</p>
-                   <hr>
+            Currently my main objective is to gain extensive experience in the Information Technology field specifically,
+            enhancing my programming skills and experience to achieve an effective output towards the benefit of my clients,
+            society and region at large, with an aim of making a difference in the economy.</p>
+        <hr>
       </div>
       <div class="tab-pane fade" id="portfolio">
         <article class="w3-container">
-          <h2><u>Portfolio</u></h2>
-      <div class="w3-left">
-        <h3>Development Capabilities:</h3>
-        <ul>
-          <li>HTML</li>
-          <li>PHP</li>
-          <li>Java script</li>
-          <li>c#</li>
-          <li>C++</li>
-          <li>java</li>
-          <li>mysql</li>
-        </ul>
-        <br>
-      </div>
-      <div class="w3-right">
-        <h3><u>Projects</u></h3>
-        <ul>
-          <li><a href="https://github.com/NjoguMunyiri/halloWorld">https://github.com/NjoguMunyiri/halloWorld</a></li>
-          <li><a href="https://github.com/NjoguMunyiri/practice">https://github.com/NjoguMunyiri/practice</a></li>
-          <li><a href="https://github.com/NjoguMunyiri/sa1">https://github.com/NjoguMunyiri/sa1</a></li>
-          <li><a href="https://github.com/NjoguMunyiri/sa2">https://github.com/NjoguMunyiri/sa2</a></li>
-          <li><a href="https://github.com/NjoguMunyiri/mysite">https://github.com/NjoguMunyiri/mysite</a></li>
-        </ul>
-      </div>
-      <p></p>
-      <hr>
-      </article>
+          <h2><u></u></h2>
+          <div class="w3-left">
+            <h3>Development Capabilities:</h3>
+            <ul class="w3-ul">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>BootStrap</li>
+              <li>PHP</li>
+              <li>Java script</li>
+              <li>c#</li>
+              <li>C++</li>
+              <li>java</li>
+              <li>mysql</li>
+            </ul>
+            <br>
+          </div>
+          <div class="w3-right">
+            <h3>Projects</h3>
+            <ul class="w3-ul">
+              <li><a href="https://github.com/NjoguMunyiri/halloWorld">https://github.com/NjoguMunyiri/halloWorld</a></li>
+              <li><a href="https://github.com/NjoguMunyiri/practice">https://github.com/NjoguMunyiri/practice</a></li>
+              <li><a href="https://github.com/NjoguMunyiri/sa1">https://github.com/NjoguMunyiri/sa1</a></li>
+              <li><a href="https://github.com/NjoguMunyiri/sa2">https://github.com/NjoguMunyiri/sa2</a></li>
+              <li><a href="https://github.com/NjoguMunyiri/mysite">https://github.com/NjoguMunyiri/mysite</a></li>
+            </ul>
+          </div>
+          <p></p>
+          <hr>
+        </article>
       </div>
 
       <div class="tab-pane fade" id="aboutme">
         <article class="w3-container">
-          <h3><u>About me</u></h3>
+          <h3><u></u></h3>
           <div class="cambria">
             <p><strong>James Njogu Munyiri</strong> is a software deveoloper who's background is a Bachelor of Science in Business and Information Technology,
               specialising in mobile programming.<br>
               <strong>Njogu Munyiri</strong> also possess a certified mobile developer in Android certification from I Lab Africa.<br>
-              Currently <strong>Njogu</strong> is persuing Moringa Prep Part Time class with the aim to advance his programming skills</p>
+              Currently <strong>Njogu</strong> is persuing Moringa Prep Part Time class with the aim to advance his programming skills.</p>
           </div>
           <hr>
         </article>
       </div>
       <div class="tab-pane fade" id="contact">
         <article class="w3-container">
-          <h3><u>Contact Me</u></h3>
+          <h3><u></u></h3>
           <div class="cambria">
             <ul class="w3-ul">
               <li>Email: <a href="mailto:munyiri_james@outlook.com">munyiri_james@outlook.com</a></li>
