additional project link

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
               <li><a href="https://github.com/NjoguMunyiri/sa1">https://github.com/NjoguMunyiri/sa1</a></li>
               <li><a href="https://github.com/NjoguMunyiri/sa2">https://github.com/NjoguMunyiri/sa2</a></li>
               <li><a href="https://github.com/NjoguMunyiri/mysite">https://github.com/NjoguMunyiri/mysite</a></li>
+              <li><a href="https://github.com/NjoguMunyiri/recordiApp">https://github.com/NjoguMunyiri/recordiApp</a></li>
             </ul>
           </div>
           <p></p>
