span, padding and margins

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <DOCTYPE html>
   <html>
   <head>
@@ -19,10 +20,22 @@
       footer{
         text-align: right;
       }
+      body{
+        border-color:#D3D3D3;
+        border-style: solid;
+        border-right-width: 11px;
+        border-bottom-width: 11px;
+      }
+      .paddingleft{
+        padding-left:20px;
+      }
+      .paddingright{
+        padding-right: 20px;
+      }
     </style>
   </head>
 
-  <body>
+  <body >
     <div class="w3-container w3-blue w3-center">
         <h1>NJOGU MUNYIRI</h1>
     </div>
@@ -37,10 +50,10 @@
     <div class="tab-content">
       <div class="tab-pane fade in active tangerine" id="home">
         <h2></h2>
-        <p><strong>James Njogu Munyiri</strong> is a young Kenyan who has interest in the world of technology specificaly software development.
+        <p><span class=""><strong>James Njogu Munyiri</strong> is a young Kenyan who has interest in the world of technology specificaly software development.
             Currently my main objective is to gain extensive experience in the Information Technology field specifically,
             enhancing my programming skills and experience to achieve an effective output towards the benefit of my clients,
-            society and region at large, with an aim of making a difference in the economy.</p>
+            society and region at large, with an aim of making a difference in the economy.</span></p>
         <hr>
       </div>
       <div class="tab-pane fade" id="portfolio">
@@ -105,7 +118,7 @@
       </div>
     </div>
     <footer>
-      <p>njogu 2017</p>
+      <p><span class="paddingright">&copy Copyright Njogu 2017</span></p>
     </footer>
   </body>
 </html>
