--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       .paddingright{
         padding-right: 20px;
       }
+      #home{
+        padding-left: 20px;
+      }
     </style>
   </head>
 
