--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="tab-content">
       <div class="tab-pane fade in active tangerine" id="home">
         <h2></h2>
-        <p><span class=""><strong>James Njogu Munyiri</strong> is a young Kenyan who has interest in the world of technology specificaly software development.
+        <p><span class=""><strong>James Njogu Munyiri</strong> is a young Kenyan who has interest in the world of technology by software development.
             Currently my main objective is to gain extensive experience in the Information Technology field specifically,
             enhancing my programming skills and experience to achieve an effective output towards the benefit of my clients,
             society and region at large, with an aim of making a difference in the economy.</span></p>
