--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
   <head>
     <title>PORTFOLIO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--W3 css-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+
+    <!--Google fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+
+    <!--bootstrap css-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!--bootstrap JavaScript-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <!--Font awesome CDN-->
+    <script src="https://use.fontawesome.com/16990d9f3b.js"></script>
     <style>
       .tangerine {
         font-family: 'Tangerine',serif;
@@ -110,11 +121,11 @@
           <h3><u></u></h3>
           <div class="cambria">
             <ul class="w3-ul">
-              <li>Email: <a href="mailto:munyiri_james@outlook.com">munyiri_james@outlook.com</a></li>
-              <li><a href="https://www.linkedin.com/in/james-munyiri-29b58792/">Linked In</a></li>
-              <li><a href="https://github.com/NjoguMunyiri">Git hub</a></li>
-              <li>Number: <a href="tel:+254707454022">+254 707 454 022</a></li>
-              <li>P.O BOX 24150-00100 GPO <br> NAIROBI KENYA</li>
+              <li><i class="fa fa-envelope-open" aria-hidden="true"></i>  Email: <a href="mailto:munyiri_james@outlook.com">munyiri_james@outlook.com</a></li>
+              <li><i class="fa fa-linkedin-square" aria-hidden="true"></i>  <a href="https://www.linkedin.com/in/james-munyiri-29b58792/">Linked In</a></li>
+              <li><i class="fa fa-github" aria-hidden="true"></i> <a href="https://github.com/NjoguMunyiri">Git hub</a></li>
+              <li><i class="fa fa-mobile" aria-hidden="true"></i> Number: <a href="tel:+254707454022">+254 707 454 022</a></li>
+              <li><i class="fa fa-address-card" aria-hidden="true"></i> P.O BOX 24150-00100 GPO <br>NAIROBI KENYA</li>
             </ul>
           </div>
         </article>
