--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </ul>
     <div class="tab-content">
       <div class="tab-pane fade in active tangerine" id="home">
-        <h2></h2>
+        <br>
         <p><span class=""><strong>James Njogu Munyiri</strong> is a young Kenyan who has interest in the world of technology by software development.
             Currently my main objective is to gain extensive experience in the Information Technology field specifically,
             enhancing my programming skills and experience to achieve an effective output towards the benefit of my clients,
@@ -72,7 +72,7 @@
       </div>
       <div class="tab-pane fade" id="portfolio">
         <article class="w3-container">
-          <h2><u></u></h2>
+          <br>
           <div class="w3-left">
             <h3>Development Capabilities:</h3>
             <ul class="w3-ul">
@@ -106,19 +106,18 @@
 
       <div class="tab-pane fade" id="aboutme">
         <article class="w3-container">
-          <h3><u></u></h3>
+          <br>
           <div class="cambria">
             <p><strong>James Njogu Munyiri</strong> is a software deveoloper who's background is a Bachelor of Science in Business and Information Technology,
               specialising in mobile programming.<br>
               <strong>Njogu Munyiri</strong> also possess a certified mobile developer in Android certification from I Lab Africa.<br>
               Currently <strong>Njogu</strong> is persuing Moringa Prep Part Time class with the aim to advance his programming skills.</p>
           </div>
-          <hr>
         </article>
       </div>
       <div class="tab-pane fade" id="contact">
         <article class="w3-container">
-          <h3><u></u></h3>
+          <br>
           <div class="cambria">
             <ul class="w3-ul">
               <li><i class="fa fa-envelope-open" aria-hidden="true"></i>  Email: <a href="mailto:munyiri_james@outlook.com">munyiri_james@outlook.com</a></li>
@@ -133,7 +132,7 @@
     </div>
     <hr>
     <footer>
-      <p><span class="paddingright">&copy Copyright Njogu 2017</span></p>
+      <p><span class="paddingright">&copy; Copyright Njogu 2017</span></p>
     </footer>
   </body>
 </html>
