--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <br>
         <p><span class=""><strong>James Njogu Munyiri</strong> is a young Kenyan who has interest in the world of technology by software development.
             Currently my main objective is to gain extensive experience in the Information Technology field specifically,
-            enhancing my programming skills and experience to achieve an effective output towards the benefit of my clients,
-            society and region at large, with an aim of making a difference in the economy.</span></p>
+             enhancing my programming skills and experience to achieve an effective output towards the benefit of my society and region at large,
+              by developing solutions that solve local (African) problems.</span></p>
         <hr>
       </div>
       <div class="tab-pane fade" id="portfolio">
