changes to the project links

--- a/index.html
+++ b/index.html
@@ -81,8 +81,6 @@
               <li>BootStrap</li>
               <li>PHP</li>
               <li>Java script</li>
-              <li>c#</li>
-              <li>C++</li>
               <li>java</li>
               <li>mysql</li>
             </ul>
@@ -91,12 +89,11 @@
           <div class="w3-right">
             <h3>Projects</h3>
             <ul class="w3-ul">
-              <li><a href="https://github.com/NjoguMunyiri/halloWorld">https://github.com/NjoguMunyiri/halloWorld</a></li>
-              <li><a href="https://github.com/NjoguMunyiri/practice">https://github.com/NjoguMunyiri/practice</a></li>
-              <li><a href="https://github.com/NjoguMunyiri/sa1">https://github.com/NjoguMunyiri/sa1</a></li>
-              <li><a href="https://github.com/NjoguMunyiri/sa2">https://github.com/NjoguMunyiri/sa2</a></li>
-              <li><a href="https://github.com/NjoguMunyiri/mysite">https://github.com/NjoguMunyiri/mysite</a></li>
               <li><a href="https://github.com/NjoguMunyiri/recordiApp">https://github.com/NjoguMunyiri/recordiApp</a></li>
+              <li><a href="https://njogumunyiri.github.io/AnitasKichen/">https://njogumunyiri.github.io/AnitasKichen/</a></li>
+              <li><a href="https://njogumunyiri.github.io/group-project/">https://njogumunyiri.github.io/group-project/</a></li>
+              <li><a href="https://njogumunyiri.github.io/onlineMarketPlace/">https://njogumunyiri.github.io/onlineMarketPlace/</a></li>
+              <li><a href="https://njogumunyiri.github.io/sa1/">https://njogumunyiri.github.io/sa1/</a></li>
             </ul>
           </div>
           <p></p>
